# Generated by Django 4.2.7 on 2026-01-21 01:03

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion
import uuid


class Migration(migrations.Migration):

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
        ('editor', '0002_add_rbac_multitenant'),
    ]

    operations = [
        migrations.CreateModel(
            name='Activity',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('title', models.CharField(max_length=200, verbose_name='Título')),
                ('objective', models.TextField(blank=True, verbose_name='Objetivo')),
                ('instructions', models.TextField(verbose_name='Instrucciones')),
                ('deadline', models.DateTimeField(blank=True, null=True, verbose_name='Fecha Límite')),
                ('status', models.CharField(choices=[('draft', 'Borrador'), ('published', 'Publicada'), ('closed', 'Cerrada')], default='draft', max_length=20, verbose_name='Estado')),
                ('allow_resubmit', models.BooleanField(default=False, verbose_name='Permitir Re-entrega')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Fecha de Creación')),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('published_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha de Publicación')),
            ],
            options={
                'verbose_name': 'Actividad',
                'verbose_name_plural': 'Actividades',
                'ordering': ['-deadline', '-created_at'],
            },
        ),
        migrations.CreateModel(
            name='IDEProject',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=200, verbose_name='Nombre del Proyecto')),
                ('blockly_xml', models.TextField(blank=True, verbose_name='Contenido XML (Blockly)')),
                ('arduino_code', models.TextField(blank=True, verbose_name='Código Arduino')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Fecha de Creación')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Última Modificación')),
            ],
            options={
                'verbose_name': 'Proyecto IDE',
                'verbose_name_plural': 'Proyectos IDE',
                'ordering': ['-updated_at'],
            },
        ),
        migrations.AddField(
            model_name='course',
            name='grade_level',
            field=models.CharField(blank=True, max_length=50, verbose_name='Nivel de Grado'),
        ),
        migrations.AddField(
            model_name='course',
            name='status',
            field=models.CharField(choices=[('active', 'Activo'), ('inactive', 'Inactivo'), ('completed', 'Completado'), ('cancelled', 'Cancelado')], default='active', max_length=20, verbose_name='Estado'),
        ),
        migrations.AddField(
            model_name='institution',
            name='agent_token',
            field=models.CharField(blank=True, help_text='Token para que los Agents se registren', max_length=64, null=True, verbose_name='Token de Agent'),
        ),
        migrations.AlterField(
            model_name='institution',
            name='id',
            field=models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False),
        ),
        migrations.AlterField(
            model_name='membership',
            name='id',
            field=models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False),
        ),
        migrations.CreateModel(
            name='Submission',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('status', models.CharField(choices=[('pending', 'Pendiente'), ('submitted', 'Entregada'), ('graded', 'Calificada')], default='pending', max_length=20, verbose_name='Estado')),
                ('attempt', models.IntegerField(default=1, verbose_name='Intento')),
                ('artifact_ref', models.JSONField(blank=True, default=dict, verbose_name='Referencia al Artefacto')),
                ('submitted_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha de Entrega')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Fecha de Creación')),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('activity', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='submissions', to='editor.activity', verbose_name='Actividad')),
                ('student', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='submissions', to=settings.AUTH_USER_MODEL, verbose_name='Estudiante')),
            ],
            options={
                'verbose_name': 'Entrega',
                'verbose_name_plural': 'Entregas',
                'ordering': ['-submitted_at', '-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Rubric',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('criteria', models.JSONField(blank=True, default=dict, verbose_name='Criterios')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('activity', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='rubric', to='editor.activity', verbose_name='Actividad')),
            ],
            options={
                'verbose_name': 'Rúbrica',
                'verbose_name_plural': 'Rúbricas',
            },
        ),
        migrations.CreateModel(
            name='ProjectSnapshot',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('label', models.CharField(blank=True, max_length=200, verbose_name='Etiqueta')),
                ('blockly_xml', models.TextField(blank=True, verbose_name='Contenido XML (Blockly)')),
                ('arduino_code', models.TextField(blank=True, verbose_name='Código Arduino')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Fecha de Creación')),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='snapshots', to='editor.ideproject', verbose_name='Proyecto')),
            ],
            options={
                'verbose_name': 'Snapshot de Proyecto',
                'verbose_name_plural': 'Snapshots de Proyectos',
                'ordering': ['-created_at'],
            },
        ),
        migrations.AddField(
            model_name='ideproject',
            name='institution',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='ide_projects', to='editor.institution', verbose_name='Institución'),
        ),
        migrations.AddField(
            model_name='ideproject',
            name='owner',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='ide_projects', to=settings.AUTH_USER_MODEL, verbose_name='Propietario'),
        ),
        migrations.CreateModel(
            name='Feedback',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('score', models.DecimalField(blank=True, decimal_places=2, max_digits=5, null=True, verbose_name='Puntaje')),
                ('comments', models.TextField(blank=True, verbose_name='Comentarios')),
                ('rubric_breakdown', models.JSONField(blank=True, default=dict, verbose_name='Desglose de Rúbrica')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Fecha de Creación')),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('submission', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='feedbacks', to='editor.submission', verbose_name='Entrega')),
                ('tutor', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='feedbacks_given', to=settings.AUTH_USER_MODEL, verbose_name='Tutor')),
            ],
            options={
                'verbose_name': 'Feedback',
                'verbose_name_plural': 'Feedbacks',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='ErrorEvent',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('code', models.CharField(choices=[('BootloaderSyncFailed', 'BootloaderSyncFailed'), ('PortBusy', 'PortBusy'), ('AgentMissing', 'AgentMissing'), ('UploadFailed', 'UploadFailed'), ('WorkspaceCorrupt', 'WorkspaceCorrupt'), ('SubmissionRace', 'SubmissionRace'), ('CompilationError', 'CompilationError'), ('SerialError', 'SerialError'), ('AuthenticationError', 'AuthenticationError'), ('PermissionError', 'PermissionError'), ('ValidationError', 'ValidationError'), ('NetworkError', 'NetworkError'), ('GenericError', 'GenericError')], max_length=100, verbose_name='Código de Error')),
                ('severity', models.CharField(choices=[('low', 'Baja'), ('medium', 'Media'), ('high', 'Alta'), ('critical', 'Crítica')], default='medium', max_length=20, verbose_name='Severidad')),
                ('message', models.TextField(verbose_name='Mensaje')),
                ('context', models.JSONField(blank=True, default=dict, verbose_name='Contexto')),
                ('ts', models.DateTimeField(auto_now_add=True, db_index=True, verbose_name='Timestamp')),
                ('resolved', models.BooleanField(default=False, verbose_name='Resuelto')),
                ('resolved_at', models.DateTimeField(blank=True, null=True, verbose_name='Resuelto en')),
                ('institution', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='error_events', to='editor.institution', verbose_name='Institución')),
                ('resolved_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='resolved_errors', to=settings.AUTH_USER_MODEL, verbose_name='Resuelto por')),
                ('user', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='error_events', to=settings.AUTH_USER_MODEL, verbose_name='Usuario')),
            ],
            options={
                'verbose_name': 'Evento de Error',
                'verbose_name_plural': 'Eventos de Error',
                'ordering': ['-ts'],
            },
        ),
        migrations.CreateModel(
            name='Enrollment',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('status', models.CharField(choices=[('active', 'Activo'), ('inactive', 'Inactivo'), ('completed', 'Completado'), ('dropped', 'Abandonado')], default='active', max_length=20, verbose_name='Estado')),
                ('enrolled_at', models.DateTimeField(auto_now_add=True, verbose_name='Fecha de Matrícula')),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('notes', models.TextField(blank=True, verbose_name='Notas')),
                ('course', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='enrollments', to='editor.course', verbose_name='Curso')),
                ('student', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='enrollments', to=settings.AUTH_USER_MODEL, verbose_name='Estudiante')),
            ],
            options={
                'verbose_name': 'Matrícula',
                'verbose_name_plural': 'Matrículas',
                'ordering': ['-enrolled_at'],
            },
        ),
        migrations.CreateModel(
            name='AuditLog',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('action', models.CharField(choices=[('create', 'Crear'), ('update', 'Actualizar'), ('delete', 'Eliminar'), ('publish', 'Publicar'), ('submit', 'Entregar'), ('grade', 'Calificar'), ('enroll', 'Matricular'), ('assign', 'Asignar'), ('login', 'Iniciar Sesión'), ('logout', 'Cerrar Sesión'), ('access', 'Acceder'), ('export', 'Exportar'), ('import', 'Importar')], max_length=50, verbose_name='Acción')),
                ('entity', models.CharField(help_text='Nombre del modelo (ej: Course, Activity)', max_length=100, verbose_name='Entidad')),
                ('entity_id', models.CharField(blank=True, max_length=100, null=True, verbose_name='ID de Entidad')),
                ('metadata', models.JSONField(blank=True, default=dict, verbose_name='Metadata')),
                ('ts', models.DateTimeField(auto_now_add=True, db_index=True, verbose_name='Timestamp')),
                ('actor', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='audit_logs', to=settings.AUTH_USER_MODEL, verbose_name='Actor')),
                ('institution', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='audit_logs', to='editor.institution', verbose_name='Institución')),
            ],
            options={
                'verbose_name': 'Log de Auditoría',
                'verbose_name_plural': 'Logs de Auditoría',
                'ordering': ['-ts'],
            },
        ),
        migrations.CreateModel(
            name='AgentInstance',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('hostname', models.CharField(max_length=255, verbose_name='Hostname')),
                ('os', models.CharField(max_length=100, verbose_name='Sistema Operativo')),
                ('agent_version', models.CharField(max_length=50, verbose_name='Versión del Agent')),
                ('ide_version_compatible', models.CharField(blank=True, max_length=50, verbose_name='Versión IDE Compatible')),
                ('status', models.CharField(choices=[('online', 'Online'), ('offline', 'Offline'), ('error', 'Error')], default='offline', max_length=20, verbose_name='Estado')),
                ('last_seen', models.DateTimeField(blank=True, null=True, verbose_name='Última Conexión')),
                ('meta', models.JSONField(blank=True, default=dict, verbose_name='Metadata')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Fecha de Registro')),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('institution', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='agent_instances', to='editor.institution', verbose_name='Institución')),
            ],
            options={
                'verbose_name': 'Instancia de Agent',
                'verbose_name_plural': 'Instancias de Agents',
                'ordering': ['-last_seen', '-created_at'],
            },
        ),
        migrations.CreateModel(
            name='ActivityWorkspace',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('status', models.CharField(choices=[('in_progress', 'En Progreso'), ('frozen', 'Congelado (Read-only)')], default='in_progress', max_length=20, verbose_name='Estado')),
                ('frozen_at', models.DateTimeField(blank=True, null=True, verbose_name='Fecha de Congelamiento')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Fecha de Creación')),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('activity', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='workspaces', to='editor.activity', verbose_name='Actividad')),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='activity_workspaces', to='editor.ideproject', verbose_name='Proyecto')),
                ('student', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='activity_workspaces', to=settings.AUTH_USER_MODEL, verbose_name='Estudiante')),
            ],
            options={
                'verbose_name': 'Workspace de Actividad',
                'verbose_name_plural': 'Workspaces de Actividades',
                'ordering': ['-updated_at'],
            },
        ),
        migrations.AddField(
            model_name='activity',
            name='course',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='activities', to='editor.course', verbose_name='Curso'),
        ),
        migrations.CreateModel(
            name='TeachingAssignment',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('status', models.CharField(choices=[('active', 'Activo'), ('inactive', 'Inactivo'), ('completed', 'Completado')], default='active', max_length=20, verbose_name='Estado')),
                ('assigned_at', models.DateTimeField(auto_now_add=True, verbose_name='Fecha de Asignación')),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('notes', models.TextField(blank=True, verbose_name='Notas')),
                ('course', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='teaching_assignments', to='editor.course', verbose_name='Curso')),
                ('tutor', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='teaching_assignments', to=settings.AUTH_USER_MODEL, verbose_name='Tutor')),
            ],
            options={
                'verbose_name': 'Asignación de Tutor',
                'verbose_name_plural': 'Asignaciones de Tutores',
                'ordering': ['-assigned_at'],
                'unique_together': {('course', 'tutor')},
            },
        ),
        migrations.AddIndex(
            model_name='submission',
            index=models.Index(fields=['activity', 'student'], name='editor_subm_activit_9e8a6e_idx'),
        ),
        migrations.AddIndex(
            model_name='submission',
            index=models.Index(fields=['status'], name='editor_subm_status_a46cde_idx'),
        ),
        migrations.AlterUniqueTogether(
            name='submission',
            unique_together={('activity', 'student', 'attempt')},
        ),
        migrations.AddIndex(
            model_name='projectsnapshot',
            index=models.Index(fields=['project', '-created_at'], name='editor_proj_project_24c17a_idx'),
        ),
        migrations.AddIndex(
            model_name='ideproject',
            index=models.Index(fields=['owner', 'institution'], name='editor_idep_owner_i_9390e0_idx'),
        ),
        migrations.AddIndex(
            model_name='ideproject',
            index=models.Index(fields=['-updated_at'], name='editor_idep_updated_f48900_idx'),
        ),
        migrations.AddIndex(
            model_name='feedback',
            index=models.Index(fields=['submission', 'tutor'], name='editor_feed_submiss_d2a21f_idx'),
        ),
        migrations.AddIndex(
            model_name='errorevent',
            index=models.Index(fields=['-ts'], name='editor_erro_ts_08c711_idx'),
        ),
        migrations.AddIndex(
            model_name='errorevent',
            index=models.Index(fields=['institution', '-ts'], name='editor_erro_institu_ee809d_idx'),
        ),
        migrations.AddIndex(
            model_name='errorevent',
            index=models.Index(fields=['code', '-ts'], name='editor_erro_code_d29c25_idx'),
        ),
        migrations.AddIndex(
            model_name='errorevent',
            index=models.Index(fields=['severity', '-ts'], name='editor_erro_severit_9df97f_idx'),
        ),
        migrations.AddIndex(
            model_name='errorevent',
            index=models.Index(fields=['resolved', '-ts'], name='editor_erro_resolve_f0edd0_idx'),
        ),
        migrations.AlterUniqueTogether(
            name='enrollment',
            unique_together={('course', 'student')},
        ),
        migrations.AddIndex(
            model_name='auditlog',
            index=models.Index(fields=['-ts'], name='editor_audi_ts_6ec0df_idx'),
        ),
        migrations.AddIndex(
            model_name='auditlog',
            index=models.Index(fields=['institution', '-ts'], name='editor_audi_institu_50decd_idx'),
        ),
        migrations.AddIndex(
            model_name='auditlog',
            index=models.Index(fields=['actor', '-ts'], name='editor_audi_actor_i_87d568_idx'),
        ),
        migrations.AddIndex(
            model_name='auditlog',
            index=models.Index(fields=['entity', 'entity_id'], name='editor_audi_entity_5d8974_idx'),
        ),
        migrations.AddIndex(
            model_name='agentinstance',
            index=models.Index(fields=['institution', 'status'], name='editor_agen_institu_62f747_idx'),
        ),
        migrations.AddIndex(
            model_name='agentinstance',
            index=models.Index(fields=['-last_seen'], name='editor_agen_last_se_eacc44_idx'),
        ),
        migrations.AlterUniqueTogether(
            name='agentinstance',
            unique_together={('institution', 'hostname')},
        ),
        migrations.AddIndex(
            model_name='activityworkspace',
            index=models.Index(fields=['activity', 'student'], name='editor_acti_activit_b7ebb8_idx'),
        ),
        migrations.AddIndex(
            model_name='activityworkspace',
            index=models.Index(fields=['status'], name='editor_acti_status_611748_idx'),
        ),
        migrations.AlterUniqueTogether(
            name='activityworkspace',
            unique_together={('activity', 'student')},
        ),
        migrations.AddIndex(
            model_name='activity',
            index=models.Index(fields=['course', 'status'], name='editor_acti_course__75648a_idx'),
        ),
        migrations.AddIndex(
            model_name='activity',
            index=models.Index(fields=['deadline'], name='editor_acti_deadlin_59a6c6_idx'),
        ),
    ]
